Добавлено сохранение ссылки на страницу друга.